app/k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
        - http:
            paths:
                - path: /?(.*)
                  backend:
                      serviceName: frontend-cluster-ip-service
                      servicePort: 3000
                - path: /api/?(.*)
                  backend:
                      serviceName: backend-cluster-ip-service
                      servicePort: 8080
